// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckboxInput.vue > renders OXD Checkbox Input 1`] = `
"<div data-v-52a07bbe="" class="oxd-checkbox-wrapper"><label data-v-52a07bbe="" class="">
    <!--v-if--><input data-v-52a07bbe="" label="Checkbox" type="checkbox"><span data-v-52a07bbe="" class="oxd-checkbox-input oxd-checkbox-input--active --label-right oxd-checkbox-input"><i data-v-85cde8ca="" data-v-52a07bbe="" class="oxd-icon bi-check oxd-checkbox-input-icon"></i></span>
  </label></div>"
`;

exports[`CheckboxInput.vue > should renders OXD Input with error 1`] = `
"<div data-v-52a07bbe="" class="oxd-checkbox-wrapper"><label data-v-52a07bbe="" class="">
    <!--v-if--><input data-v-52a07bbe="" label="Checkbox" type="checkbox"><span data-v-52a07bbe="" class="oxd-checkbox-input oxd-checkbox-input--active oxd-checkbox-input--error --label-right oxd-checkbox-input"><i data-v-85cde8ca="" data-v-52a07bbe="" class="oxd-icon bi-check oxd-checkbox-input-icon"></i></span>
  </label></div>"
`;
